erDiagram
    direction LR
    ACCOUNT ||--o{ ARTICLE : writes
    ARTICLE ||--|{ ARTICLE_TAG : has
    LANGUAGE ||--o{ ARTICLE_LANGUAGE : "is assigned to"
    ARTICLE ||--|{ ARTICLE_LANGUAGE : contains
    TAG ||--o{ ARTICLE_TAG : "is assigned to"

    ACCOUNT {
        uuid id PK "Only use UUIDv7"
        varchar(40) username UK "Character limit based on Githubs username limit of 39 characters"
        varchar(255) password_hash
        varchar(255) email
        timestamp created_at
        timestamp updated_at
        boolean is_blocked
        boolean is_deleted
    }
    ARTICLE {
        bigserial id
        uuid user_id FK
        varchar(50) title
        varchar(75) short_description
        text code_blocks "Don't apply full-text search on this column"
        varchar(2000) body
        timestamp created_at
        timestamp updated_at
        timestamp published_at
        boolean is_draft
        boolean is_published
        boolean is_blocked
        varchar(255) blocked_reason
    }
    ARTICLE_TAG{
        bigint article_id PK,FK 
        varchar(20) tag_name PK,FK
    }
    TAG {
        varchar(20) name PK
    }
    ARTICLE_LANGUAGE {
        bigint article_id PK,FK
        varchar(40) language_name PK,FK
    }
    LANGUAGE {
        varchar(40) name PK "Name of a programming language supported by Markdown code blocks"
    }